@startuml

left to right direction

entity group_member {
    * chatroom_id : string <<FK>>
    * user_id : string <<FK>>
    --
    * is_muted : bool
}

entity chat {
    * id : int
    --
    * chatroom_id : string <<FK>>
    * user_id : string <<FK>>
    * message : string
    * is_deleted : bool
    * is_edited : bool
    * gmt_create : date
    * gmt_modified : date
}

entity user {
    * user_id : string
    --
    * email : string
    * username : string
    * password : string
    * profile_picture : longtext
    * banner : longtext
    * status : string
    * gmt_create : date
    * gmt_modified : date
}

entity session {
    * session_id : string
    --
    * user_id : string <<FK>>
    * session_dt : date
    * gmt_create : date
    * gmt_modified : date
}

entity friend_list {
    * user_id : string <<FK>>
    * friend_id : string <<FK>>
    --
    * is_blocked : bool 
    * gmt_create : date
    * gmt_modified : date
}

entity chatroom {
    * chatroom_id : string
    --
    extend_info : string
    * gmt_create : date
    * gmt_modified : date
}

entity friendroom {
    * user_id : string <<FK>>
    * friend_id : string <<FK>>
    --
    * is_muted : bool
}

' relation
user }o--o| friend_list

user }o--o| friendroom

user }o--o| group_member
chatroom }o--|| group_member

user }o--o| chat
chatroom }o--o| chat

user }o--o| session

skinparam chatroomInheritance 1
chatroom <|-- friendroom


@enduml